NXP-6752: make the page provider error message internationalized

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
@@ -106,7 +106,7 @@
 
             <ui:define name="error_message">
               <c:if test="#{provider.hasError()}">
-                #{provider.errorMessage}
+                #{messages[provider.errorMessage]}
               </c:if>
             </ui:define>
 
