--- a/src/main/resources/web/nuxeo.war/layoutDemo/menu.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/menu.xhtml
@@ -8,6 +8,7 @@
     <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.standardWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{standardWidgetTypes}" />
+    <ui:param name="openByDefault" value="true" />
   </ui:include>
 
   <ui:include src="menu_template.xhtml">
@@ -15,6 +16,7 @@
     <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.listingWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{listingWidgetTypes}" />
+    <ui:param name="openByDefault" value="true" />
   </ui:include>
 
   <ui:include src="menu_template.xhtml">
@@ -22,6 +24,7 @@
     <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.customWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{customWidgetTypes}" />
+    <ui:param name="openByDefault" value="true" />
   </ui:include>
 
 </div>
