--- a/src/main/resources/web/nuxeo.war/layoutDemo/menu_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/menu_template.xhtml
@@ -9,17 +9,18 @@ needed parameters:
 - categoryTitle
 - widgetTypes
 - currentWidgetType
+- openByDefault
 </c:if>
 
   <nxu:set var="widgetsSelected" value="#{currentWidgetType.category == category}">
-    <h3 class="#{nxu:test(widgetsSelected or currentWidgetType==null, 'unfolded', 'folded')}">
+    <h3 class="#{nxu:test(widgetsSelected or (currentWidgetType==null and openByDefault), 'unfolded', 'folded')}">
       <a href="#nogo" onclick="return toggleBox(this)">
         <h:outputText value="#{categoryTitle}" />
       </a>
     </h3>
   
     <div class="boxBody"
-      style="#{nxu:test(widgetsSelected or currentWidgetType==null, '', 'overflow: visible; display: none;')}">
+      style="#{nxu:test(widgetsSelected or (currentWidgetType==null and openByDefault), '', 'overflow: visible; display: none;')}">
   
       <nxu:set var="widgetTypes" value="#{widgetTypes}">
         <ul class="layoutDemoMenu">
