--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/search/search_results_advanced.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/search/search_results_advanced.xhtml
@@ -19,7 +19,7 @@
     <div id="content">
 
       <nxu:set var="contentViewId" value="0">
-      <nxu:set var="contentViewName" value=#{searchConfigurationActions.advancedSearchView}>
+      <nxu:set var="contentViewName" value="#{searchConfigurationActions.advancedSearchView}">
 
         <ui:decorate template="/incl/content_view.xhtml" />
 
