NXP-6764: use ADVANCED_SEARCH flag to filter content views

--- a/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/select_advanced_search_view_widget_template.xhtml
+++ b/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/select_advanced_search_view_widget_template.xhtml
@@ -7,7 +7,7 @@
 
    <h:selectOneMenu value="#{field}" id="#{widget.id}" >
        <nxu:selectItems
-       		value="#{contentViewService.contentViewNames}"
+       		value="#{contentViewService.contentViewNames('ADVANCED_SEARCH')}"
             var="viewStr"
             itemValue="#{viewStr}"
             itemLabel="#{messages[viewStr]}" />
