--- a/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/select_advanced_search_view_widget_template.xhtml
+++ b/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/select_advanced_search_view_widget_template.xhtml
@@ -10,7 +10,7 @@
        		value="#{contentViewService.contentViewNames('ADVANCED_SEARCH')}"
             var="viewStr"
             itemValue="#{viewStr}"
-            itemLabel="#{messages[viewStr]}" />
+            itemLabel="#{viewStr}" />
    </h:selectOneMenu>
 
 </f:subview>
