NXP-6707: more doc in the 'about' section

--- a/src/main/resources/web/nuxeo.war/layoutDemo/about.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/about.xhtml
@@ -24,6 +24,8 @@
             making it possible to preview the resulting widget.
           </li>
         </ul>
+        It was also interesting for functional tests, to verify that default widget
+        types all work as expected, and are styled correctly.
       </div>
       <br />
 
@@ -49,7 +51,7 @@
         reference page or preview forms on this showcase application (using the
         standard JSF implementation of layouts).
         <br />
-        It can also be exported in JSON format for Nuxeo Studio, as it accepts
+        It can be exported in JSON format for Nuxeo Studio, as it accepts
         widget types as JSON contributions and uses them to fill its registries.
         A specific GWT implementation of layouts has been implemented for this
         purpose. 
@@ -73,6 +75,15 @@
         http://doc.nuxeo.com/display/NXDOC/Custom+widget+types</a>.
       </div>
       <br />
+      
+      <div>
+        Apart from that, this JSF application shows a standard way of defining
+        a separate application on top of Nuxeo, with custom pages and URLs,
+        that can be accessed without authentication. Check the
+        <a href="https://doc.nuxeo.com/x/hwFu" target="_blank">Navigation URLs</a>
+        documentation for more details!
+        <br />
+      </div>
 
     </div>
 
