NXP-6326: rename content view template areas

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
@@ -76,7 +76,7 @@
 
       <div class="#{nxu:test(foldable, 'boxBody', '')}">
 
-        <ui:insert name="boxBodyStart" />
+        <ui:insert name="content_view_header" />
 
         <ui:insert name="content_view_selector">
           <ui:include src="/incl/content_view_result_layout_selector.xhtml" />
@@ -187,7 +187,7 @@
 
         </a4j:outputPanel>
 
-        <ui:insert name="boxBodyEnd" />
+        <ui:insert name="content_view_footer" />
 
       </div>
     </div>
