NXP-6326: rename content view template areas

--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/src/main/resources/web/nuxeo.war/incl/dashboard/user_jsf_dashboard.xhtml
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/src/main/resources/web/nuxeo.war/incl/dashboard/user_jsf_dashboard.xhtml
@@ -39,7 +39,7 @@
               <ui:param name="contentViewName" value="user_tasks" />
               <ui:param name="foldable" value="true" />
               <ui:param name="hideEmpty" value="false" />
-              <ui:define name="boxBodyStart">
+              <ui:define name="content_view_header">
                 <h:outputText value="#{messages['label.workflow.tasks']}"
                   class="infoMessage" />          
               </ui:define>
@@ -53,7 +53,7 @@
               <ui:param name="contentViewName" value="user_processes" />
               <ui:param name="foldable" value="true" />
               <ui:param name="hideEmpty" value="false" />
-              <ui:define name="boxBodyStart">
+              <ui:define name="content_view_header">
                 <h:outputText value="#{messages['label.user.processes']}"
                   class="infoMessage" />
               </ui:define>
