--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/dndFormCollector.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/dndFormCollector.xhtml
@@ -1,4 +1,4 @@
-<div xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:f="http://java.sun.com/jsf/core"
@@ -6,12 +6,20 @@
   xmlns:nxh="http://nuxeo.org/nxweb/html"
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
+  <head>
+    <style>
+      body, input, select, .labelColumn{
+        font-size:9pt;
+        font-family:Arial;
+      }
+    </style>
+  </head>
+<body>
+<div><h:form>
+  <nxl:layout name="#{dndFormActions.getLayout()}" mode="create"
+    value="#{dataCollector}" />
 
-<h:form>
-      <nxl:layout name="#{dndFormActions.getLayout()}" mode="create"
-        value="#{dataCollector}" />
-
-      <h:commandButton action="#{dndFormActions.save()}"></h:commandButton>
-</h:form>
-
-</div>
+  <h:commandButton action="#{dndFormActions.save()}" value="#{messages['command.continue']}"></h:commandButton>
+</h:form></div>
+</body>
+</html>
