--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes.xhtml
@@ -1,6 +1,7 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
  xmlns:nxu="http://nuxeo.org/nxweb/util"
- xmlns:ui="http://java.sun.com/jsf/facelets">
+ xmlns:ui="http://java.sun.com/jsf/facelets"
+ xmlns:c="http://java.sun.com/jstl/core">
 
 <script type="text/javascript" src="#{baseURL}seam/resource/remoting/interface.js?#{SeamRemotingBeanNames}"></script>
 <script type="text/javascript">
@@ -20,6 +21,8 @@
  <span id="js-label.review.confirmDeleteTask"> <h:outputText value="#{messages['label.review.confirmDeleteTask']}" /></span>
 </div>
 <script type="text/javascript" src="#{baseURL}js/?scripts=confirmAlerts.js|DragAndDrop.js|tableSelections.js|customSeamRemotingWaiter.js|custom-javascript.js|default-contextmenu-actions.js|custom-contextmenu-actions.js|tooltip.js"></script>
+
+<c:if test="#{useHtml5DragAndDrop}">
 
 <script type="text/javascript" src="#{baseURL}scripts/dnd/jquery.client.js" ></script>
 <script type="text/javascript" src="#{baseURL}scripts/dnd/jquery.dnd-file-upload.js" ></script>
@@ -46,5 +49,9 @@ var ctx = { currentDocument : '#{currentDocument.id}',
             });
    });
 </script>
+</c:if>
 
+<c:if test="#{!useHtml5DragAndDrop}">
+  <ui:include src="/incl/dnd/legacyDnd.xhtml" />
+</c:if>
 </div>
