--- a/nuxeo-platform-audit/nuxeo-platform-audit-client/src/main/resources/web/nuxeo.war/incl/tabs/document_history.xhtml
+++ b/nuxeo-platform-audit/nuxeo-platform-audit-client/src/main/resources/web/nuxeo.war/incl/tabs/document_history.xhtml
@@ -1,19 +1,18 @@
-<div xmlns="http://www.w3.org/1999/xhtml"
+<div xmlns:h="http://java.sun.com/jsf/html"
   xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:nxd="http://nuxeo.org/nxweb/document"
-  xmlns:nxu="http://nuxeo.org/nxweb/util">
+  xmlns:nxu="http://nuxeo.org/nxweb/util"
+  xmlns:nxd="http://nuxeo.org/nxweb/document">
 
   <div class="tabsBar subtabsBar">
     <h:form id="document_manage">
-        <nxu:dataList layout="unorderedList" var="subTab"
+      <nxu:dataList layout="unorderedList" var="subTab"
         value="#{subTabsActionsList}"
-        itemStyleClass="#{nxu:test(webActions.currentSubTabAction == subTab, 'selected', '')}">
+        itemStyleClass="#{nxu:test(webActions.currentSubTabId == subTab.id, 'selected', '')}">
         <nxd:restDocumentLink document="#{currentDocument}"
-        tab="#{webActions.currentTabAction.id}" subTab="#{subTab.id}">
+          tab="#{webActions.currentTabAction.id}" subTab="#{subTab.id}">
           <h:outputText value="#{messages[subTab.label]}" />
         </nxd:restDocumentLink>
-        </nxu:dataList>
+      </nxu:dataList>
     </h:form>
   </div>
   <div style="clear: both"></div>
