--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_manage.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_manage.xhtml
@@ -1,21 +1,22 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:nxu="http://nuxeo.org/nxweb/util"
+  xmlns:ui="http://java.sun.com/jsf/facelets"
+  xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document">
-  
+
   <div class="tabsBar subtabsBar">
     <h:form id="document_manage">
-        <nxu:dataList layout="unorderedList" var="subTab"
+      <nxu:dataList layout="unorderedList" var="subTab"
         value="#{subTabsActionsList}"
-        itemStyleClass="#{nxu:test(webActions.currentSubTabAction == subTab, 'selected', '')}">
+        itemStyleClass="#{nxu:test(webActions.currentSubTabId == subTab.id, 'selected', '')}">
         <nxd:restDocumentLink document="#{currentDocument}"
-        tab="#{webActions.currentTabAction.id}" subTab="#{subTab.id}">
+          tab="#{webActions.currentTabAction.id}" subTab="#{subTab.id}">
           <h:outputText value="#{messages[subTab.label]}" />
         </nxd:restDocumentLink>
-        </nxu:dataList> 
+      </nxu:dataList>
     </h:form>
   </div>
   <div style="clear: both"></div>
- 
+
   <div class="tabsContent">
     <ui:include src="#{webActions.currentSubTabAction.link}"/>
   </div>
