--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_icon_type_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_icon_type_widget_template.xhtml
@@ -10,7 +10,7 @@
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
   <div id="docRefTarget:#{field_1}">
-    <div id="docRef:#{field_1}" class="cell popupTarget" docRef="#{field_1}">
+    <div id="docRef:#{field_1}" class="cell popupTarget dropout" docRef="#{field_1}">
       <nxu:graphicImage
         value="#{nxd:iconPath(field_0)}" alt="#{field_2}" title="#{field_2}"
         rendered="#{!empty nxd:iconPath(field_0)}"
