--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_title_link_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_title_link_widget_template.xhtml
@@ -10,11 +10,11 @@
 <c:if test="#{nxl:isLikePlainMode(widget.mode)}">#{nxd:titleOrId(field_0)}</c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
-  <div class="popupTarget" docRef="#{field_1}">
+  <div class="popupTarget dropout" docRef="#{field_1}">
 
     <nxd:restDocumentLink document="#{field_0}"
       tab="#{widgetProperty_tab}">
-      <span id="title_#{field_1}" title="#{field_2}">
+      <span id="title_#{field_1}" title="#{field_2}" >
         #{nxd:titleOrId(field_0)}
       </span>
     </nxd:restDocumentLink>
