--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_password_validation_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_password_validation_widget_template.xhtml
@@ -4,7 +4,7 @@
 
 <c:if test="#{widget.mode == 'edit'}">
 
-  <h:inputHidden value="needed" validator="#{userManagerActions.validatePassword}"
+  <h:inputHidden value="needed" validator="#{userManagementActions.validatePassword}"
     id="#{widget.id}">
     <f:attribute name="firstPasswordInputId"
       value="#{layout.widgetMap['firstPassword'].id}" />
