--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_vgoups_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_vgoups_widget_template.xhtml
@@ -6,7 +6,7 @@
   xmlns:c="http://java.sun.com/jstl/core"
   xmlns:rich="http://richfaces.org/rich">
 
-  <nxu:methodResult name="vgroups" value="#{userManagerActions.getUserVirtualGroups(field_0)}">
+  <nxu:methodResult name="vgroups" value="#{userManagementActions.getUserVirtualGroups(field_0)}">
     <h:dataTable value="#{vgroups}"
       var="item" rendered="#{not empty vgroups}">
       <h:column>
