--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/search_deleted_documents_widget.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/search_deleted_documents_widget.xhtml
@@ -3,10 +3,8 @@
   xmlns:c="http://java.sun.com/jstl/core">
 
   <c:if test="#{widget.mode == 'view'}">
-    <h:outputText id="#{widget.id}" value="#{messages['label.no']}"
-      rendered="#{field == 'deleted'}" />
-    <h:outputText id="#{widget.id}" value="#{messages['label.yes']}"
-      rendered="#{field != 'deleted'}" />
+    <h:outputText id="#{widget.id}"
+      value="#{field == 'deleted' ? messages['label.no']: messages['label.yes']}" />
   </c:if>
 
   <c:if test="#{widget.mode == 'edit'}">
