--- a/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/ui_default_type_widget_template.xhtml
+++ b/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/ui_default_type_widget_template.xhtml
@@ -6,7 +6,7 @@
 
    <h:selectOneMenu value="#{field}" id="#{widget.id}" >
        <nxu:selectItems
-       		value="#{typesConfigurationActions.allowedTypesWithSchemaFile}"
+       		value="#{typesConfigurationActions.typesWithSchemaFile}"
             var="type"
             itemValue="#{type.id}"
             itemLabel="#{messages[type.label]}" />
